--- a/k8s-install/ansible/roles/master/tasks/main.yml
+++ b/k8s-install/ansible/roles/master/tasks/main.yml
@@ -8,14 +8,19 @@
   shell: "kubeadm reset"
   register: reset_cluster
 
+- name: Set master ip address 
+  set_fact: 
+    master_ip: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
+
 - name: Init kubeadm 
   when: reset_cluster|succeeded
   shell: |
-          kubeadm init --token {{ token }}
+          kubeadm init --token {{ token }} --apiserver-advertise-address= {{ master_ip }} --service-cidr= {{ service_cidr }} \
+          --pod-networ-cidr= {{ pod_network_cidr }}
   register: init_cluster
 
 - name: Create k8s config directory
-  file: path="~/.kube" state=directory
+  file: path="$HOME/.kube" state=directory
 
 - name: Copy admin.conf to home directory
   when: init_cluster
