--- a/contrail/contrail.yml
+++ b/contrail/contrail.yml
@@ -12,26 +12,27 @@ metadata:
 data:
   AAA_MODE: no-auth
   ANALYTICS_API_VIP: ""
-  ANALYTICS_NODES: 192.168.0.185
+  ANALYTICS_NODES: 10.0.2.27
   AUTH_MODE: noauth
   CLOUD_ORCHESTRATOR: kubernetes
   CONFIG_API_VIP: ""
-  CONFIG_NODES: 192.168.0.185
-  CONFIGDB_NODES: 192.168.0.185
-  CONTROL_NODES: 192.168.0.185
-  CONTROLLER_NODES: 192.168.0.185
+  CONFIG_NODES: 10.0.2.27
+  CONFIGDB_NODES: 10.0.2.27
+  CONTROL_NODES: 10.0.2.27
+  CONTROLLER_NODES: 10.0.2.27
   KUBERNETES_IP_FABRIC_FORWARDING: "false"
   LOG_LEVEL: SYS_DEBUG
   METADATA_PROXY_SECRET: contrail
-  #PHYSICAL_INTERFACE: eth1
-  RABBITMQ_NODES: 192.168.0.185
+#  PHYSICAL_INTERFACE:
+  RABBITMQ_NODES: 10.0.2.27
   RABBITMQ_NODE_PORT: "5673"
-  #VROUTER_GATEWAY: 192.168.0.1
-  WEBUI_NODES: 192.168.0.185
+#  VROUTER_GATEWAY:
+  ENCAP_PRIORITY: "MPLSoUDP,VXLAN,MPLSoGRE"
+  WEBUI_NODES: 10.0.2.27
   WEBUI_VIP: ""
   VROUTER_MTU: "1000"
   #BGP_ASN: "63168"
-  ENABLE_4BYTE_AS: "true" 
+  ENABLE_4BYTE_AS: "true"
 
 ---
 # default params will be set in provisioner environment
@@ -48,7 +49,7 @@ metadata:
   name: configzookeeperenv
   namespace: kube-system
 data:
-  ZOOKEEPER_NODES: 192.168.0.185
+  ZOOKEEPER_NODES: 10.0.2.27
   ZOOKEEPER_PORT: "2181"
   ZOOKEEPER_PORTS: "2888:3888"
 ---
@@ -67,7 +68,7 @@ metadata:
   namespace: kube-system
 data:
   JVM_EXTRA_OPTS: -Xms1g -Xmx2g
-  CASSANDRA_SEEDS: 192.168.0.185
+  CASSANDRA_SEEDS: 10.0.2.27
   CASSANDRA_CLUSTER_NAME: ContrailConfigDB
   CASSANDRA_START_RPC: "true"
   CASSANDRA_LISTEN_ADDRESS: auto
@@ -91,15 +92,13 @@ metadata:
   name: kube-manager-config
   namespace: kube-system
 data:
-  KUBERNETES_API_SERVER: 192.168.0.185
+  KUBERNETES_API_SERVER: 10.0.2.27
   KUBERNETES_API_SECURE_PORT: "6443"
   KUBERNETES_IP_FABRIC_SNAT: "true"
-  KUBERNETES_PUBLIC_FIP_POOL: "{'domain': 'default-domain', 'project': 'k8s-default', 'network': 'k8s-public', 'name': 'default'}"
+  KUBERNETES_PUBLIC_FIP_POOL: "{'domain': 'default-domain', 'project': 'k8s-default', 'network': 'k8s-public', 'name': 'default"
   K8S_TOKEN_FILE: "/tmp/serviceaccount/token"
-  KUBERNETES_API_SECURE_PORT: "6443"
-  #KUBERNETES_IP_FABRIC_FORWARDING: "true"
-  KUBERNETES_POD_SUBNETS: 10.32.0.0/24
-  KUBERNETES_SERVICE_SUBNETS: 10.96.0.0/24
+  KUBERNETES_POD_SUBNETS: 10.34.0.0/24
+  KUBERNETES_SERVICE_SUBNETS: 10.97.0.0/24
 
 # Containers section
 ---
@@ -136,7 +135,7 @@ spec:
       hostNetwork: true
       containers:
       - name: config-zookeeper
-        image: "hub.juniper.net/contrail/contrail-external-zookeeper:2008.121"
+        image: "hub.juniper.net/contrail/contrail-external-zookeeper:2011.138"
         imagePullPolicy: ""
         env:
         - name: NODE_TYPE
@@ -195,7 +194,7 @@ spec:
       hostNetwork: true
       containers:
       - name: contrail-configdb
-        image: "hub.juniper.net/contrail/contrail-external-cassandra:2008.121"
+        image: "hub.juniper.net/contrail/contrail-external-cassandra:2011.138"
         imagePullPolicy: ""
         env:
         - name: NODE_TYPE
@@ -209,7 +208,7 @@ spec:
         - mountPath: /var/log/cassandra
           name: configdb-logs
       - name: contrail-config-database-nodemgr
-        image: "hub.juniper.net/contrail/contrail-nodemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-nodemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -234,7 +233,7 @@ spec:
         - mountPath: /mnt
           name: docker-unix-socket
       - name: contrail-config-database-provisioner
-        image: "hub.juniper.net/contrail/contrail-provisioner:2008.121"
+        image: "hub.juniper.net/contrail/contrail-provisioner:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -302,13 +301,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -317,7 +316,7 @@ spec:
           name: host-usr-bin
       containers:
       - name: contrail-analytics-api
-        image: "hub.juniper.net/contrail/contrail-analytics-api:2008.121"
+        image: "hub.juniper.net/contrail/contrail-analytics-api:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -328,7 +327,7 @@ spec:
         - mountPath: /var/log/contrail
           name: analytics-logs
       - name: contrail-analytics-collector
-        image: "hub.juniper.net/contrail/contrail-analytics-collector:2008.121"
+        image: "hub.juniper.net/contrail/contrail-analytics-collector:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -337,7 +336,7 @@ spec:
         - mountPath: /var/log/contrail
           name: analytics-logs
       - name: contrail-analytics-nodemgr
-        image: "hub.juniper.net/contrail/contrail-nodemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-nodemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -360,7 +359,7 @@ spec:
         - mountPath: /mnt
           name: docker-unix-socket
       - name: contrail-analytics-provisioner
-        image: "hub.juniper.net/contrail/contrail-provisioner:2008.121"
+        image: "hub.juniper.net/contrail/contrail-provisioner:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -423,13 +422,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -438,7 +437,7 @@ spec:
           name: host-usr-bin
       containers:
       - name: contrail-controller-control
-        image: "hub.juniper.net/contrail/contrail-controller-control-control:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-control-control:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -447,7 +446,7 @@ spec:
         - mountPath: /var/log/contrail
           name: control-logs
       - name: contrail-controller-control-dns
-        image: "hub.juniper.net/contrail/contrail-controller-control-dns:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-control-dns:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -458,7 +457,7 @@ spec:
         - mountPath: /var/log/contrail
           name: control-logs
       - name: contrail-controller-control-named
-        image: "hub.juniper.net/contrail/contrail-controller-control-named:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-control-named:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -471,7 +470,7 @@ spec:
         - mountPath: /var/log/contrail
           name: control-logs
       - name: contrail-controller-nodemgr
-        image: "hub.juniper.net/contrail/contrail-nodemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-nodemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -494,7 +493,7 @@ spec:
         - mountPath: /mnt
           name: docker-unix-socket
       - name: contrail-controller-provisioner
-        image: "hub.juniper.net/contrail/contrail-provisioner:2008.121"
+        image: "hub.juniper.net/contrail/contrail-provisioner:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -559,13 +558,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -574,7 +573,7 @@ spec:
           name: host-usr-bin
       containers:
       - name: contrail-controller-config-api
-        image: "hub.juniper.net/contrail/contrail-controller-config-api:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-config-api:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -585,7 +584,7 @@ spec:
         - mountPath: /var/log/contrail
           name: config-logs
       - name: contrail-controller-config-devicemgr
-        image: "hub.juniper.net/contrail/contrail-controller-config-devicemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-config-devicemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -596,7 +595,7 @@ spec:
         - mountPath: /var/log/contrail
           name: config-logs
       - name: contrail-controller-config-schema
-        image: "hub.juniper.net/contrail/contrail-controller-config-schema:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-config-schema:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -607,7 +606,7 @@ spec:
         - mountPath: /var/log/contrail
           name: config-logs
       - name: contrail-controller-config-svcmonitor
-        image: "hub.juniper.net/contrail/contrail-controller-config-svcmonitor:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-config-svcmonitor:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -618,7 +617,7 @@ spec:
         - mountPath: /var/log/contrail
           name: config-logs
       - name: contrail-controller-config-nodemgr
-        image: "hub.juniper.net/contrail/contrail-nodemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-nodemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -647,7 +646,7 @@ spec:
         - mountPath: /mnt
           name: docker-unix-socket
       - name: contrail-controller-config-provisioner
-        image: "hub.juniper.net/contrail/contrail-provisioner:2008.121"
+        image: "hub.juniper.net/contrail/contrail-provisioner:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -712,13 +711,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -727,7 +726,7 @@ spec:
           name: host-usr-bin
       containers:
       - name: contrail-controller-webui-job
-        image: "hub.juniper.net/contrail/contrail-controller-webui-job:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-webui-job:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -736,7 +735,7 @@ spec:
         - mountPath: /var/log/contrail
           name: webui-logs
       - name: contrail-controller-webui-web
-        image: "hub.juniper.net/contrail/contrail-controller-webui-web:2008.121"
+        image: "hub.juniper.net/contrail/contrail-controller-webui-web:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -838,7 +837,7 @@ spec:
       hostNetwork: true
       containers:
       - name: rabbitmq
-        image: "hub.juniper.net/contrail/contrail-external-rabbitmq:2008.121"
+        image: "hub.juniper.net/contrail/contrail-external-rabbitmq:2011.138"
         imagePullPolicy: ""
         env:
         - name: NODE_TYPE
@@ -897,13 +896,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -912,7 +911,7 @@ spec:
           name: host-usr-bin
       containers:
       - name: contrail-kube-manager
-        image: "hub.juniper.net/contrail/contrail-kubernetes-kube-manager:2008.121"
+        image: "hub.juniper.net/contrail/contrail-kubernetes-kube-manager:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -965,13 +964,13 @@ spec:
       hostNetwork: true
       initContainers:
       - name: contrail-node-init
-        image: "hub.juniper.net/contrail/contrail-node-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-node-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
         env:
         - name: CONTRAIL_STATUS_IMAGE
-          value: "hub.juniper.net/contrail/contrail-status:2008.121"
+          value: "hub.juniper.net/contrail/contrail-status:2011.138"
         envFrom:
         - configMapRef:
             name: env
@@ -979,7 +978,7 @@ spec:
         - mountPath: /host/usr/bin
           name: host-usr-bin
       - name: contrail-vrouter-kernel-init
-        image: "hub.juniper.net/contrail/contrail-vrouter-kernel-init:2008.121"
+        image: "hub.juniper.net/contrail/contrail-vrouter-kernel-init:2011.138"
         imagePullPolicy: ""
         securityContext:
           privileged: true
@@ -996,7 +995,7 @@ spec:
         - mountPath: /host/bin
           name: host-bin
       - name: contrail-kubernetes-cni-init
-        #image: "hub.juniper.net/contrail/contrail-kubernetes-cni-init:2008.121"
+        #image: "hub.juniper.net/contrail/contrail-kubernetes-cni-init:2011.138"
         image: docker.io/simonjohngreen/contrail-kubernetes-cni-init:2008.121-mtu-patch
         imagePullPolicy: ""
         envFrom:
@@ -1015,7 +1014,7 @@ spec:
           name: agent-logs
       containers:
       - name: contrail-vrouter-agent
-        image: "hub.juniper.net/contrail/contrail-vrouter-agent:2008.121"
+        image: "hub.juniper.net/contrail/contrail-vrouter-agent:2011.138"
         imagePullPolicy: ""
         # TODO: Priveleged mode is requied because w/o it the device /dev/net/tun
         # is not present in the container. The mounting it into container
@@ -1050,7 +1049,7 @@ spec:
         - mountPath: /tmp/serviceaccount
           name: pod-secret
       - name: contrail-agent-nodemgr
-        image: "hub.juniper.net/contrail/contrail-nodemgr:2008.121"
+        image: "hub.juniper.net/contrail/contrail-nodemgr:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
@@ -1071,7 +1070,7 @@ spec:
         - mountPath: /mnt
           name: docker-unix-socket
       - name: contrail-agent-provisioner
-        image: "hub.juniper.net/contrail/contrail-provisioner:2008.121"
+        image: "hub.juniper.net/contrail/contrail-provisioner:2011.138"
         imagePullPolicy: ""
         envFrom:
         - configMapRef:
