--- a/vagrant-install/ansible.cfg
+++ b/vagrant-install/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts
+inventory = ./hosts
 roles_path = ./roles
 host_key_checking = False
 log_path = ./ansible.log
@@ -14,7 +14,9 @@ ansible_managed = Ansible managed
 sudo_user = root
 inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .creds
 force_color = 1
-remote_tmp = ~/.ansible/tmp
+remote_tmp = $HOME/.ansible/tmp
+local_tmp = $HOME/.ansible/tmp
+callback_whitelist = profile_tasks
 
 [inventory]
 
@@ -25,7 +27,9 @@ remote_tmp = ~/.ansible/tmp
 
 [ssh_connection]
 ssh_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+#ssh_args = -o ControlMaster=auto -o ControlPersist=60s
 pipelining = True
+#control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 
 [persistent_connection]
 
