--- a/vagrant-install/roles/common/tasks/main.yml
+++ b/vagrant-install/roles/common/tasks/main.yml
@@ -13,6 +13,14 @@
     name: /swapfile
     state: absent
 
+#- name: setenforce 0
+#  command: setenforce 0
+
+- name: Remove chrony service
+  yum:
+    name: chrony
+    state: absent
+    
 - name: Install ntpd service
   yum:
     name: ntp
@@ -60,112 +68,22 @@
     name: epel-release
     state: present
 
-- name: Uninstall existing old docker packages if exists
-  yum:
-    name: "{{ item }}"
-    state: absent
-  with_items: 
-      - docker
-      - docker-client
-      - docker-common
+- name: Set selinux to disabled
+  selinux:
+    policy=targeted
+    state=disabled
+  register: selinux_state_disabled
 
-- name: Install docker dependencies 
-  yum:
-    name: "{{ item }}"
-    state: present
-    update_cache: yes
-  with_items: "{{ k8s_docker_pkgs }}"
+- name: Schedule system reboot
+  shell: "sleep 5 && reboot"
+  async: 1
+  poll: 0
+  when: selinux_state_disabled.changed
 
-- name: Add docker repo
-  when: false
-  get_url:
-    url: https://download.docker.com/linux/centos/docker-ce.repo
-    dest: /etc/yum.repos.d/docker-ce.repo
-    mode: 0644
-
-- name: Add docker repo
-  yum_repository:
-    name: docker
-    description: Docker repo
-    enabled: true
-    gpgcheck: true
-    repo_gpgcheck: true
-    baseurl: https://download.docker.com/linux/centos/7/$basearch/edge
-    gpgkey:
-      - https://download.docker.com/linux/centos/gpg
-
-- name: Update yum
-  command: yum update -y
-
-- name: Install docker
-  yum:
-    name:
-      - "docker-ce-{{ k8s_docker_version }}.ce"
-      - containerd.io
-    state: present
-  register: res
-  until: res is successful
-
-- name: Install docker-py
-  pip:
-    name: docker-py
-
-- name: Check /etc/docker folder exists
-  file:
-    path: /etc/docker
-    state: directory
-
-- name: Start docker service
-  systemd:
-    name: docker
-    state: restarted
-    daemon_reload: yes
-    enabled: yes
-
-- name: Add kubernetes repo
-  yum_repository:
-    name: kubernetes
-    description: Kubernetes repo
-    enabled: true
-    gpgcheck: true
-    repo_gpgcheck: true
-    sslverify: false
-    baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-    gpgkey:
-      - https://packages.cloud.google.com/yum/doc/yum-key.gpg
-      - https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-    
-- name: Add k8s GPG keys
-  when: false
-  rpm_key:
-    key: "{{ item }}"
-    state: present
-  register: k8s_rpm_key
-  with_items:
-    - https://packages.cloud.google.com/yum/doc/yum-key.gpg
-    - https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-    
-- name: Make cache if k8s key changed
-  when: false
-  command: "yum -q makecache -y --disablerepo='*' --enablerepo='kubernetes'"
-  when: k8s_rpm_key is changed
-  args:
-    warn: false
-
-- name: Login to docker registry
-  when: false
-  docker_login:
-    username: mahesh
-    password: "{{ vault['docker']['password'] }}"
-    email: "{{ vault['docker']['email'] }}"
-    reauthorize: yes
-
-- name: Install k8s packages 
-  yum:
-    name: '{{ item }}'
-    state: present
-    update_cache: yes
-  with_items:
-    - kubeadm
-    - kubelet
-    - kubectl 
+- name: Wait for the reboot to complete if selinux is changed
+  wait_for_connection:
+    connect_timeout: 20
+    sleep: 5
+    delay: 5
+    timeout: 300
+  when: selinux_state_disabled.changed
