--- a/vagrant-install/roles/worker/tasks/main.yml
+++ b/vagrant-install/roles/worker/tasks/main.yml
@@ -1,49 +1,50 @@
 ---
-- name: Start docker service
-  service:
-    name: docker
-    state: started
+- name: Check if kubelet.conf exists
+  stat: 
+    path: "/etc/kubernetes/kubelet.conf"
+  register: kubelet_conf
+
+- name: Join the node when kubelet conf file is not created    
+  block:
+    - name: Get worker second interface address
+      set_fact:
+        worker_node_ipaddress: "{{ ansible_eth1.ipv4.address }}"
+
+    - debug: var=ansible_eth1.ipv4.address
+
+    - name: Configure worker node IP 
+      lineinfile:
+        path: /etc/default/kubelet
+        create: yes
+        line: KUBELET_EXTRA_ARGS=--node-ip={{ worker_node_ipaddress }}
     
-- name: Add vagrant user to docker group
-  user: 
-    name: vagrant
-    group: docker
+    - name: Generate k8s join command
+      command: kubeadm token create --print-join-command
+      register: join_cmd_op
+      delegate_to: "{{ groups['masters'][0] }}"
     
-- name: Start  kubelet service
-  service:
-    name: kubelet
-    enabled: yes
-    state: restarted
-
-- name: Get worker second interface address
-  set_fact:
-    worker_node_ipaddress: "{{ ansible_eth1.ipv4.address }}"
-
-- name: Configure worker node IP 
-  lineinfile:
-    path: /etc/default/kubelet
-    create: yes
-    line: KUBELET_EXTRA_ARGS=--node-ip={{ worker_node_ipaddress }}
-
-- name: Re-start  kubelet service
-  service:
-    name: kubelet
-    daemon_reload: yes
-    state: restarted
-
-- name: Generate k8s join command
-  command: kubeadm token create --print-join-command
-  register: join_cmd_op
-  delegate_to: "{{ groups['master'][0] }}"
-
-- debug: var=join_cmd_op.stdout_lines[0]
-
-- name: Print kubeadm join command
-  set_fact:
-    kubeadm_join_cmd: "{{ join_cmd_op.stdout_lines[0] }}"
-
-- name: Do kubeadm join with command line
-  command: "{{ kubeadm_join_cmd }} --ignore-preflight-errors=all"
-  args:
-    creates: /etc/kubernetes/kubelet.conf
-  register: kubeadm_join_res
+    - debug: var=join_cmd_op.stdout_lines[0]
+    
+    - name: Enable  kubelet service
+      systemd:
+        name: kubelet
+        state: restarted
+        enabled: yes
+    
+    - name: Print kubeadm join command
+      set_fact:
+        kubeadm_join_cmd: "{{ join_cmd_op.stdout_lines[0] }}"
+    
+    - name: Do kubeadm join with command line
+      command: "{{ kubeadm_join_cmd }} --ignore-preflight-errors=all"
+      args:
+        creates: /etc/kubernetes/kubelet.conf
+      register: kubeadm_join_res
+    
+    - name: Re-start  kubelet service
+      systemd:
+        name: kubelet
+        daemon_reload: yes
+        state: started
+        enabled: yes
+  when: not kubelet_conf.stat.exists
